# simple_store

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
db_dumps/: init.sql  orders.sql  products.sql
migrations/: env.py
migrations/versions/: 0001_init.py  0002_order_price_to_amount.py  0003_order_quantity.py  0004_order_amount_to_product_price.py  0005_product_reserved_count.py  0006_order_amount.py
src/: config.py  constants.py  database.py  dependencies.py  logger.py  main.py
src/api/: dependencies.py  validators.py
src/api/routes/: __init__.py  category_router.py  order_router.py  product_router.py  report_router.py  subcategory_router.py
src/api/schemas/: __init__.py  category.py  common.py  filter.py  order.py  product.py  sales_report.py  subcategory.py
src/domain/entities/: __init__.py  category.py  order.py  product.py  sales_report.py  subcategory.py
src/domain/models/: category.py  order.py  product.py  subcactegory.py
src/domain/repositories/: __init__.py  category_repository.py  order_repository.py  product_repository.py  subcategory_repository.py
src/domain/services/: __init__.py  category_service.py  order_service.py  product_service.py  report_service.py  subcategory_service.py
src/domain/use_cases/: __init__.py  order_use_case.py  product_use_case.py
src/infrastructure/: database.py
src/infrastructure/repositories/: __init__.py  sa_category_repository.py  sa_order_repository.py  sa_product_repository.py  sa_subcategory_repository.py
